--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
+    "ejs":  "2.5.6",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "nodemon": "^3.0.2"
   }
 }
