--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "csdc25_se_teamgeist",
   "version": "1.0.0",
   "description": "",
@@ -9,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs":  "2.5.6",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "path": "^0.12.7",
-    "nodemon": "^3.0.2"
+    "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
