--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.0",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "short-unique-id": "^5.0.3"
   }
 }
